<resources>
    <string name="app_name">Click2Drink</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_open"> Open Navigation drawer</string>
    <string name="navigation_close"> Close Navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name_hint">(e.g) Juan Dela Cruz</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="province">Province</string>
    <string name="zipcode">Zipcode</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="profile">Profile</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="my_purchases">My Purchases</string>
    <string name="scheduled_order">Scheduled Order</string>
    <string name="authentification">Authentification</string>
    <string name="logout">Logout</string>
    <string name="use_as_default_address">Use as Default Address</string>
    <string name="processing">Processing</string>


</resources>